--- a/src/_boilerplate/css/style.css
+++ b/src/_boilerplate/css/style.css
@@ -77,12 +77,17 @@ audio, canvas, video { display: inline-block; *display: inline; *zoom: 1; }
 #micrositeContainerCompress { margin: 0 auto; width: 980px; }
 #micrositeContent { font-size: 80%; overflow: hidden; margin: 0 0 25px; }
 #micrositeContentColumnFull { margin: 0 0 25px; }
-#micrositeContentColumnLeft { float: left; width: 600px; }
+#micrositeContentColumnLeft { float: left; width: 620px; }
 #micrositeContentColumnRight { float: right; width: 300px; }
 .micrositeContentColumnSpan { clear: both; }
 .micrositeModuleContainer { margin: 0; }
 .micrositeModuleHeader { margin: 0; }
 .micrositeModuleHeader h3 { margin: 0; }
+
+/* media object block */
+.mediaBlock { margin: 10px; }
+.mediaBlock, .mediaBlockContent { overflow: hidden; _overflow: visible; zoom: 1; }
+.mediaBlock img { float: left; margin-right: 10px; display: block; }
 
 /* header */
 #micrositeHeader { position: relative; margin: 0 0 25px; }
