--- a/src/style.css
+++ b/src/style.css
@@ -1551,4 +1551,11 @@ table th[class*="span"],
 
 
 
-#micrositeListTable { width: 800px; margin: 20px auto; }
+#micrositeListTable {
+  width: 800px; margin: 20px auto;
+  -moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.27), 0 0 40px rgba(0, 0, 0, 0.06) inset;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.27), 0 0 40px rgba(0, 0, 0, 0.06) ;
+}
+
+
+
