--- a/src/_boilerplate/navigation.jade
+++ b/src/_boilerplate/navigation.jade
@@ -1,7 +1,9 @@
+- var pages = [{name: 'Home', filename: 'index.html'}, {name: 'ReplaceMe', filename: 'replaceMe'}, {name: 'ReplaceMe', filename: 'replaceMe'}, {name: 'ReplaceMe', filename: 'replaceMe'}]
+
 #micrositeHeaderNavigation
   ul
-  for page in pages
-    if page.name === thisPage
-      li.on: a(href='#{page.filename}') #{page.name}
-    else
-      li: a(href='#{page.filename}') #{page.name}
+    for page in pages
+      if page.name === thisPage
+        li.on: a(href='#{page.filename}') #{page.name}
+      else
+        li: a(href='#{page.filename}') #{page.name}
