--- a/src/_boilerplate/index.jade
+++ b/src/_boilerplate/index.jade
@@ -5,6 +5,6 @@ html(lang='en')
     meta(charset='utf-8')
     title #{site.name}
     script(src='//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js')
-  body#edit
+  body(id="#{site.name}")
     include main
     //- include abstract
