--- a/src/_boilerplate/navigation.jade
+++ b/src/_boilerplate/navigation.jade
@@ -1,4 +1,4 @@
-- var pages = [{name: 'Home', filename: 'index.html'}, {name: 'ReplaceMe', filename: 'replaceMe'}, {name: 'ReplaceMe', filename: 'replaceMe'}, {name: 'ReplaceMe', filename: 'replaceMe'}]
+- var pages = [{name: 'Home', filename: 'index.html'}, {name: 'Page2', filename: 'Page2.html'}, {name: 'Page3', filename: 'Page3.html'}]
 
 #micrositeHeaderNavigation
   ul
