--- a/src/_boilerplate/page2.jade
+++ b/src/_boilerplate/page2.jade
@@ -1,4 +1,4 @@
-extends embedded
+extends layout
 
 block content
   #micrositeContainer
@@ -8,7 +8,7 @@ block content
           #micrositeHeaderBanner
             .micrositeModuleContainer
               h1 New microsite h1
-          - var thisPage = 'Home'
+          - var thisPage = 'Page2'
           include navigation
         #micrositeContent
           #micrositeContentColumnFull
