added "contact us" buttons for japanese and chinese pages

--- a/src/sites/hpenterpriseservicessolutionscentre/contentTabs.jade
+++ b/src/sites/hpenterpriseservicessolutionscentre/contentTabs.jade
@@ -4,7 +4,7 @@
 p HP Enterprise Services helps businesses and governments more effectively leverage technology to achieve better outcomes. HP provides the infrastructure technology outsourcing services; applications services, consulting, and support that help clients achieve those objectives. Our strategy is to deliver high-value solutions through our talented workforce to help clients innovate, manage information and risk, and become more agile so they can better serve their customers and citizens.
 p Enterprise Services serves 426 of the Fortune 500 companies. We leverage the breadth of the HP portfolio and our global delivery strategy to offer comprehensive IT services to more than 1,000 business and government clients in 90 countries. With our commitment to innovation, HP is driving the evolution of the enterprise—one in which the organization and technology are intertwined.
 
-.contentTabs
+.contentTabs#contentTabs-English
   .contentTabsNav
       ul
         for tab in tabs
