--- a/src/sites/workdaycloudmicrosite/css/style.css
+++ b/src/sites/workdaycloudmicrosite/css/style.css
@@ -159,9 +159,10 @@ audio, canvas, video { display: inline-block; *display: inline; *zoom: 1; }
 .faceToFace ul { margin: 0 !important; padding: 0 10px !important; list-style: none; }
 .faceToFace li { background: transparent url(../images/bullet.png) 0 1px no-repeat; padding: 0 0 10px 25px; line-height: 1.3 !important; }
 .faceToFace li.twitter { background-image: url(../images/bulletTwitter.png); }
-.faceToFace a { color: #1768ad !important; font-size: 14px; }
+.faceToFace li a { color: #1768ad !important; font-size: 14px; }
 .faceToFaceHeader { position: relative; height: 145px; background: transparent url(../images/backgroundPersona.jpg) 0 0 repeat-x; }
 .faceToFaceHeader h3 { position: absolute; top: 50px; left: 140px; color: #1768ad; font-size: 23px; width: 280px; line-height: 1.3 !important; }
+.faceToFaceHeader h3 a { color: #1768ad !important; }
 .faceToFace > div:first-child .faceToFaceHeader h3 { top: 34px; }
 .faceToFacePersona { background: transparent url(../images/personaFemale.png) 0 0 no-repeat; top: 15px; left: 15px; width: 109px; height: 119px; position: absolute; }
 .faceToFacePersonaMale { background-image: url(../images/personaMale.png); }
