--- a/src/sites/workdaycloudmicrosite/faceToFace.jade
+++ b/src/sites/workdaycloudmicrosite/faceToFace.jade
@@ -3,8 +3,8 @@
 .faceToFace
   div
     .faceToFaceHeader
-      span.faceToFacePersona.faceToFacePersonaMale
-      h3 Help Me Organize and Develop My Global Workforce
+      a(href='replaceMe'): span.faceToFacePersona.faceToFacePersonaMale
+      h3: a(href='replaceMe') Help Me Organize and Develop My Global Workforce
     .faceToFaceContent
       p Explore these financial applications resources and make faster decisions by understanding costs, revenue, and profitability
       ul
@@ -16,8 +16,8 @@
         li: a(href='replaceMe') Innovation in Financial Management: How Workday is Breaking the Barriers of Legacy ERP
   div
     .faceToFaceHeader
-      span.faceToFacePersona.faceToFacePersonaFemale
-      h3 I Need Real-Time Access to Financial Information
+      a(href='replaceMe'): span.faceToFacePersona.faceToFacePersonaFemale
+      h3: a(href='replaceMe') I Need Real-Time Access to Financial Information
     .faceToFaceContent
       p Explore these financial applications resources and make faster decisions by understanding costs, revenue, and profitability
       ul
