--- a/src/sites/hpservicesemea2/css/style.css
+++ b/src/sites/hpservicesemea2/css/style.css
@@ -224,7 +224,7 @@ h1, h2, h3, h4, h5, h6 { font-family: HPSimplifiedBold, Arial, sans-serif; font-
 .oneColList p { margin: 0 0 5px !important; }
 
 
-.micrositeCustomContainerLeft { color: #5a5a5a; font-size: 16px; line-height: 1.6; margin: 0 0 20px; padding: 15px; min-height: 220px; background-color: #f2f2f2; border: 1px solid #afafaf; width: 590px; float: left; }
+.micrositeCustomContainerLeft { color: #5a5a5a; font-size: 15px; line-height: 1.6; margin: 0 0 20px; padding: 15px 15px 3px; min-height: 230px; background-color: #f2f2f2; border: 1px solid #afafaf; width: 590px; float: left; }
 .micrositeCustomContainerLeft p { margin: 0 !important; }
 .micrositeCustomContainerLeft h2 { color: #000; font-size: 24px; margin: 0 0 10px !important; }
 .micrositeCustomContainerRight { float: right; margin: 0 0 20px; }
