--- a/src/sites/hpservicesemea2/css/style.css
+++ b/src/sites/hpservicesemea2/css/style.css
@@ -1,4 +1,4 @@
-/* 2013-02-11 */
+/* 2013-04-09 */
 
 @font-face {
     font-family: 'HPSimplifiedBold';
@@ -230,3 +230,21 @@ h1, h2, h3, h4, h5, h6 { font-family: HPSimplifiedBold, Arial, sans-serif; font-
 .micrositeCustomContainerRight { float: right; margin: 0 0 20px; }
 .micrositeMeboxContainer { background-color: #000; clear: both; min-height: 400px; padding: 15px 0; margin: 10px 0 0; }
 
+/* featured video player */
+.featuredVideo { clear: both; border: 1px solid #666; padding: 10px 0 10px 10px; margin: 0 0 25px; vertical-align: top; position: relative; *zoom: 1; }
+.featuredVideo:before, .featuredVideo:after { content: ' '; display: table; }
+.featuredVideo:after { clear: both; }
+.featuredVideoPlayer { width: 640px; height: 360px; background-color: black; float: left; }
+.noPlaylist .featuredVideoPlayer { width: 920px; height: 520px; }
+.featuredVideoPlaylist { width: 280px; height: 380px; background-color: #ececec; float: right; margin: -10px 0; overflow-y: scroll; overflow-x: hidden; visibility: hidden; }
+.featuredVideoPlaylistHeader { color: #fff; background-color: #444; font-size: 13px; padding: 6px 8px !important; margin: 0 !important; }
+.featuredVideoPlaylist ul { list-style: none; padding: 0 !important; margin: 3px 0 3px !important; }
+.featuredVideoPlaylist li { cursor: pointer; background-color: #fff; min-height: 66px; margin-bottom: 2px; border-left: 6px solid #ccc; }
+.featuredVideoPlaylist li.active { border-left: 6px solid #666; }
+.featuredVideoPlaylist .featuredVideoTitle { font-size: 12px; margin: 0 !important; line-height: 1.3 !important; color: #000; font-weight: normal; }
+.featuredVideoPlaylist .mediaBlock { padding: 8px 5px; margin: 1px 2px 0; }
+.featuredVideoPlaylist .mediaBlock, .featuredVideoPlaylist .mediaBlockContent { overflow: hidden; _overflow: visible; *zoom: 1; }
+.featuredVideoPlaylist .mediaBlock img { float: left; margin-right: 10px; display: block; width: 100px; height: 50px; }
+.featuredVideoSummary { display: none; }
+.featuredVideoPlaylistTooltip { display: none; z-index: 1; border: 1px solid #444; background-color: #fff; position: absolute; right: 288px; top: 0; min-height: 48px; width: 250px; padding: 8px 10px; font-size: 13px; line-height: 16px; box-shadow: 0 0 20px rgba(0, 0, 0, .5); }
+.featuredVideoPlaylistTooltip:after{ content: ''; width: 0; height: 0; position: absolute; top: 50%; margin-top: -8px; right: -8px;  border-top: 8px solid transparent; border-bottom: 8px solid transparent; border-left: 8px solid #444; }
