--- a/src/sites/hpci2/css/style.css
+++ b/src/sites/hpci2/css/style.css
@@ -1,5 +1,4 @@
-/* this is hpci2 style.css */
-/* normalize browser defaults as much as possible */
+/* 2013-04-10 */
 
 /* base */
 html { font-size: 100%; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; }
@@ -227,12 +226,6 @@ body { background-color: #f2f2f2; }
 
 .micrositeModuleFeaturedOutput { border: 1px solid #000; padding: 40px 0 20px !important; overflow: hidden; clear: both; }
 
-
-.micrositeFeaturedTabConvergedInfratructure > a { background: url(../images/tab_ciOff.png) no-repeat; }
-.micrositeFeaturedTabConvergedInfratructure > a.current { background: url(../images/tab_ciOn.png) no-repeat; bottom: -1px; }
-.micrositeFeaturedTabCloud > a { background: url(../images/tab_cloudOff.png) no-repeat; }
-.micrositeFeaturedTabCloud > a.current { background: url(../images/tab_cloudOn.png) no-repeat; bottom: -1px; }
-
 .micrositeFeaturedInfo h4 { line-height: 1.4 !important; font-size: 13px; margin: 0 0 5px !important; }
 .micrositeFeaturedInfo p { margin: 5px 0 5px; }
 
@@ -326,3 +319,246 @@ a.activeThumbnail { border: 5px solid #007dba !important; }
 .micrositeFeaturedInfo p {
   margin-top: 10px !important;
 }
+
+
+/* content tabs plugin styles */
+.contentTabs {
+  border: 1px solid #cccccc;
+  overflow: hidden;
+  margin: 0 0 25px;
+  position: relative; }
+
+.contentTabsNav {
+  background-color: #fafafa;
+  position: relative; }
+
+.contentTabsNav ul {
+  background-color: #fff;
+  margin: 0 !important;
+  padding: 0 !important;
+  list-style: none; }
+
+.contentTabsNav li {
+  border-bottom: 1px solid #cccccc; }
+
+.contentTabsNav li:hover {
+  background-color: #d4e9f2; }
+
+.contentTabsNav li a {
+  color: black !important;
+  display: block;
+  text-transform: uppercase;
+  padding: 10px;
+  max-height: 38px; }
+
+.contentTabsNav li a:hover {
+  text-decoration: none !important; }
+
+.contentTabsNav li.active a {
+  color: white !important;
+  background-color: #0099d8 !important;
+  border-bottom: none;
+  position: relative; }
+
+.contentTabsPanel {
+  display: none;
+  padding: 10px;
+  color: #4c4d4f;
+  height: 450px;
+  overflow-y: scroll;
+  overflow-x: hidden; }
+
+.contentTabsPanel:first-child {
+  display: block; }
+
+.contentTabsPanelIntroGraphic {
+  border: 1px solid #cccccc !important;
+  float: right;
+  margin: 0 0 10px 10px; }
+
+.contentTabsPanel p {
+  margin: 0 0 10px !important; }
+
+.contentTabsPanel h3 {
+  font-size: 16px !important;
+  margin: 0 0 5px !important; }
+
+.tabsVerticalLeft .contentTabsNav, .tabsVerticalRight .contentTabsNav {
+  width: 180px;
+  height: 470px; }
+
+.tabsVerticalLeft .contentTabsNav li.active a:after,
+.tabsVerticalRight .contentTabsNav li.active a:before,
+.tabsHorizontalTop .contentTabsNav li.active a:after,
+.tabsHorizontalBottom .contentTabsNav li.active a:before {
+  content: '';
+  position: absolute;
+  display: block;
+  height: 0;
+  width: 0; }
+
+.tabsVerticalLeft .contentTabsNav {
+  float: left;
+  border-right: 1px solid #cccccc; }
+
+.tabsVerticalLeft .contentTabsNav li.active a:after {
+  top: 0;
+  right: -12px;
+  border-top: 21px solid transparent;
+  border-left: 12px solid #0099d8;
+  border-bottom: 21px solid transparent; }
+
+.tabsVerticalLeft .contentTabsPanelCollection {
+  float: right;
+  width: 740px; }
+
+.tabsVerticalRight .contentTabsNav {
+  float: right;
+  border-left: 1px solid #cccccc; }
+
+.tabsVerticalRight .contentTabsNav li.active a:before {
+  top: 0;
+  left: -12px;
+  border-top: 21px solid transparent;
+  border-right: 12px solid #0099d8;
+  border-bottom: 21px solid transparent; }
+
+.tabsVerticalRight .contentTabsPanelCollection {
+  float: left;
+  width: 740px; }
+
+.tabsHorizontalTop .contentTabsNav ul {
+  border-bottom: 1px solid #cccccc;
+  margin-bottom: 20px !important;
+  text-align: center; }
+
+.tabsHorizontalTop .contentTabsNav li, .tabsHorizontalBottom .contentTabsNav li {
+  display: inline-block;
+  border-right: 1px solid #cccccc;
+  border-bottom: none; }
+
+.tabsHorizontalTop .contentTabsNav li:first-child, .tabsHorizontalBottom .contentTabsNav li:first-child {
+  border-left: 1px solid #cccccc; }
+
+.tabsHorizontalTop .contentTabsNav li.active a:after {
+  top: 38px;
+  left: 33%;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-top: 10px solid #0099d8; }
+
+.tabsHorizontalBottom .contentTabsNav {
+  position: relative;
+  top: 475px; }
+
+.tabsHorizontalBottom .contentTabsNav ul {
+  border-top: 1px solid #cccccc;
+  margin-top: 20px !important;
+  text-align: center; }
+
+.tabsHorizontalBottom .contentTabsNav li:first-child {
+  border-left: 1px solid #cccccc; }
+
+.tabsHorizontalBottom .contentTabsNav li.active a:before {
+  top: -10px;
+  left: 33%;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-bottom: 10px solid #0099d8; }
+
+.tabsHorizontalBottom .contentTabsPanelCollection {
+  margin-top: -60px;
+  margin-bottom: 60px; }
+
+.tabsNone .contentTabsNav {
+  display: none; }
+
+.pinPanelIntro .contentTabsPanel {
+  overflow-y: hidden;
+  overflow-x: hidden; }
+
+.pinPanelIntro .contentTabsPanelContent {
+  height: 280px;
+  overflow-y: scroll;
+  overflow-x: hidden; }
+
+.pinPanelIntro .contentTabsPanelIntro {
+  height: 150px;
+  padding: 0 0 10px;
+  margin: 0 0 15px;
+  border-bottom: 1px solid #dddddd;
+  overflow: hidden; }
+
+/* copy these along wih content tabs since they're used in the panel views */
+.mediaBlock, .mediaBlockContent {
+  overflow: hidden;
+  _overflow: visible;
+  zoom: 1; }
+
+.mediaBlock img {
+  float: left;
+  margin-right: 10px;
+  display: block; }
+
+.oneColList, .twoColGrid {
+  clear: both; }
+
+.oneColList > ul, .twoColGrid > ul {
+  clear: both;
+  margin: 0 !important;
+  padding: 0 !important;
+  list-style: none;
+  overflow: hidden; }
+
+.twoColGrid ul > li {
+  clear: left;
+  border-top: 1px solid #dddddd;
+  overflow: hidden; }
+
+.oneColList ul > li:first-child, .twoColGrid ul > li:first-child {
+  border: none;
+  margin-top: 0; }
+
+.twoColGrid .gridItem {
+  width: 46%;
+  float: left;
+  margin: 15px 10px; }
+
+.twoColGrid .gridItem:first-child {
+  border-right: 1px solid #dddddd;
+  padding-right: 10px; }
+
+.twoColGrid .gridItem p {
+  margin: 10px 0 0 !important;
+  line-height: 1.1 !important; }
+
+.twoColGrid .mediaBlockImage {
+  width: 80px;
+  height: 100px; }
+
+.oneColList {
+  margin: -10px 0 0; }
+
+.oneColList li {
+  border-top: 1px solid #dddddd;
+  margin: 15px 0 5px;
+  padding: 15px 0 0; }
+
+.oneColList h4 {
+  font-size: 16px;
+  margin: 0 0 5px !important; }
+
+.oneColList p {
+  margin: 0 0 5px !important; }
+
+.contentTabsCaption {
+  font-size: 26px;
+  margin: 0 0 5px !important; }
+
+
+/*
+.micrositeFeaturedTabConvergedInfratructure > a { background: url(../images/tab_ciOff.png) no-repeat; }
+.micrositeFeaturedTabConvergedInfratructure > a.current { background: url(../images/tab_ciOn.png) no-repeat; bottom: -1px; }
+.micrositeFeaturedTabCloud > a { background: url(../images/tab_cloudOff.png) no-repeat; }
+.micrositeFeaturedTabCloud > a.current { background: url(../images/tab_cloudOn.png) no-repeat; bottom: -1px; }
+ */
