changes as of 4-12-13  12:30pm

--- a/sites/dev/ibmservicevirtmicrosite/embedded.jade
+++ b/sites/dev/ibmservicevirtmicrosite/embedded.jade
@@ -10,5 +10,10 @@ block content
               h1 Service Virtualization Performance Center
         #micrositeContent
           #micrositeContentColumnFull
+            //- introduction stuff here
+            include featuredVideo
           #micrositeContentColumnLeft
+            .contentTabsCaption Discover how service virtualization can accelerae software delivery cross these platforms
+            include contentTabs
           #micrositeContentColumnRight
+            p service virtualization resources here
