--- a/sites/dev/ibmservicevirtmicrosite/css/style.css
+++ b/sites/dev/ibmservicevirtmicrosite/css/style.css
@@ -20,7 +20,8 @@ audio, canvas, video { display: inline-block; *display: inline; *zoom: 1; }
 
 /* 'namespace' as much of normalize as possible due to embedded microsites */
 #micrositeContainer { background-color: #fff; color: #000; font-family: arial, sans-serif;  }
-#micrositeContainer h1, #micrositeContainer h2, #micrositeContainer h3, #micrositeContainer h4, #micrositeContainer h5, #micrositeContainer h6 { line-height: 1em; margin: 0 0 1em; padding: 0; font-family: 'LubalinGraph', Arial, sans-serif; }
+#micrositeContainer h1, #micrositeContainer h2, #micrositeContainer h3, #micrositeContainer h4, #micrositeContainer h5, #micrositeContainer h6 { line-height: 1em; margin: 0 0 1em; padding: 0;}
+#micrositeContainer h1, h2 {  font-family: 'LubalinGraph', Arial, sans-serif; }
 #micrositeContainer p { margin: 0 0 1em; }
 #micrositeContainer a { color: #00e; text-decoration: none; }
 #micrositeContainer a:visited { color: #551a8b; }
@@ -86,7 +87,7 @@ audio, canvas, video { display: inline-block; *display: inline; *zoom: 1; }
 #micrositeContainer { margin: 0; }
 #micrositeContainerInner { margin: 0; }
 #micrositeContainerCompress { margin: 0 auto; width: 980px; }
-#micrositeContent { font-size: 80%; overflow: hidden; margin: 0 0 25px; }
+#micrositeContent { font-size: 80%; overflow: hidden; margin: 0 20px 25px; }
 #micrositeContentColumnFull { margin: 0 0 25px; }
 #micrositeContentColumnLeft { float: left; width: 620px; }
 #micrositeContentColumnRight { float: right; width: 300px; }
@@ -94,6 +95,7 @@ audio, canvas, video { display: inline-block; *display: inline; *zoom: 1; }
 .micrositeModuleContainer { margin: 0; }
 .micrositeModuleHeader { margin: 0; }
 .micrositeModuleHeader h3 { margin: 0; }
+#micrositeContentColumnFull { }
 
 /* media object block */
 .mediaBlock { margin: 10px; }
@@ -169,10 +171,368 @@ audio, canvas, video { display: inline-block; *display: inline; *zoom: 1; }
 .addThisVertical.addthis_default_style { width: 36px; left: -23px; background: none; }
 .addThisVertical.addthis_20x20_style { width: 40px; left: -61px; }
 .addThisVertical.addthis_20x20_style a { margin: 10px; }
-.addThisVertical.addthis_32x32_style { width: 52px; margin: 10px; left: -62px; }
+.addThisVertical.addthis_32x32_style { width: 52px; margin: 10px; left: -82px; }
 .addThisVertical.addthis_32x32_style a { margin: 12px; }
 
 
 
 
-#micrositeContentColumnFull { height: 800px; }
+/* featured video */
+
+
+.featuredVideo {
+  border: 1px solid #444444;
+  margin: 0 0 25px;
+  padding: 10px 0 10px 10px;
+  position: relative;
+  overflow: hidden;
+  *zoom: 1;
+}
+.featuredVideo .featuredVideoPlayer {
+  background-color: black;
+  float: left;
+  height: 360px;
+  position: relative;
+  width: 640px;
+}
+.featuredVideo.noPlaylist .featuredVideoPlayer {
+  width: 920px;
+  height: 520px;
+}
+.featuredVideo .featuredVideoPlaylist {
+  background-color: #ececec;
+  float: right;
+  height: 380px;
+  margin: -10px 0;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  visibility: hidden;
+  width: 280px;
+}
+.featuredVideo .featuredVideoPlaylist .featuredVideoPlaylistHeader {
+  color: white;
+  background-color: #444444;
+  font-size: 16px;
+  font-weight: normal;
+  padding: 3px 8px !important;
+  margin: 0 !important;
+}
+.featuredVideo .featuredVideoPlaylist ul {
+  list-style: none;
+  padding: 0 !important;
+  margin: 3px 0 3px !important;
+}
+.featuredVideo .featuredVideoPlaylist ul li {
+  cursor: pointer;
+  background-color: white;
+  min-height: 66px;
+  margin-bottom: 2px;
+  border-left: 6px solid #cccccc;
+}
+.featuredVideo .featuredVideoPlaylist ul li.active {
+  border-left: 6px solid #2ba6cb;
+}
+.featuredVideo .featuredVideoPlaylist .featuredVideoTitle {
+  font-size: 12px;
+  margin: 0 !important;
+  line-height: 1.3 !important;
+  color: black;
+  font-weight: normal;
+}
+.featuredVideo .featuredVideoPlaylist .mediaBlock, .featuredVideo .featuredVideoPlaylist .mediaBlockContent {
+  overflow: hidden;
+  _overflow: visible;
+  *zoom: 1;
+}
+.featuredVideo .featuredVideoPlaylist .mediaBlock {
+  padding: 8px 5px;
+  margin: 1px 2px 0;
+}
+.featuredVideo .featuredVideoPlaylist .mediaBlock img {
+  float: left;
+  margin-right: 10px;
+  display: block;
+  width: 100px;
+  height: 50px;
+}
+.featuredVideo .featuredVideoPlaylist .featuredVideoSummary {
+  display: none;
+}
+.featuredVideo .featuredVideoPlaylistTooltip {
+  display: none;
+  z-index: 1;
+  border: 1px solid #444;
+  background-color: #fff;
+  position: absolute;
+  right: 288px;
+  top: 0;
+  min-height: 48px;
+  width: 250px;
+  padding: 8px 10px;
+  font-size: 13px;
+  line-height: 16px;
+  -webkit-box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+  -moz-box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+}
+.featuredVideo .featuredVideoPlaylistTooltip:after {
+  content: '';
+  width: 0;
+  height: 0;
+  position: absolute;
+  top: 50%;
+  margin-top: -8px;
+  right: -8px;
+  border-top: 8px solid transparent;
+  border-bottom: 8px solid transparent;
+  border-left: 8px solid #444;
+}
+.featuredVideo .featuredVideoPlayerOverlay {
+  height: 360px;
+  width: 640px;
+  background-color: #ccc;
+  opacity: .5;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.featuredVideoTestWrapper {
+  margin: 0 20px 50px;
+}
+
+
+/* content tabs plugin styles */
+.contentTabs {
+  border: 1px solid #cccccc;
+  overflow: hidden;
+  margin: 0 0 25px;
+  position: relative; }
+
+.contentTabsNav {
+  background-color: #fafafa;
+  position: relative; }
+
+.contentTabsNav ul {
+  background-color: #fff;
+  margin: 0 !important;
+  padding: 0 !important;
+  list-style: none; }
+
+.contentTabsNav li {
+  border-bottom: 1px solid #cccccc; }
+
+.contentTabsNav li:hover {
+  background-color: #d4e9f2; }
+
+.contentTabsNav li a {
+  color: black !important;
+  display: block;
+  text-transform: uppercase;
+  padding: 10px;
+  max-height: 38px; }
+
+.contentTabsNav li a:hover {
+  text-decoration: none !important; }
+
+.contentTabsNav li.active a {
+  color: white !important;
+  background-color: #0099d8 !important;
+  border-bottom: none;
+  position: relative; }
+
+.contentTabsPanel {
+  display: none;
+  color: #4c4d4f;
+  height: 450px;
+  overflow-y: scroll;
+  overflow-x: hidden; }
+
+.contentTabsPanel:first-child {
+  display: block; }
+
+.contentTabsPanelIntroGraphic {
+  border: 1px solid #cccccc !important;
+  float: right;
+  margin: 0 0 10px 10px; }
+
+.contentTabsPanel p {
+  margin: 0 0 10px !important; }
+
+.contentTabsPanel h3 {
+  font-size: 16px !important;
+  margin: 0 0 5px !important; }
+
+.tabsVerticalLeft .contentTabsNav, .tabsVerticalRight .contentTabsNav {
+  width: 180px;
+  height: 470px; }
+
+.tabsVerticalLeft .contentTabsNav li.active a:after,
+.tabsVerticalRight .contentTabsNav li.active a:before,
+.tabsHorizontalTop .contentTabsNav li.active a:after,
+.tabsHorizontalBottom .contentTabsNav li.active a:before {
+  content: '';
+  position: absolute;
+  display: block;
+  height: 0;
+  width: 0; }
+
+.tabsVerticalLeft .contentTabsNav {
+  float: left;
+  border-right: 1px solid #cccccc; }
+
+.tabsVerticalLeft .contentTabsNav li.active a:after {
+  top: 0;
+  right: -12px;
+  border-top: 21px solid transparent;
+  border-left: 12px solid #0099d8;
+  border-bottom: 21px solid transparent; }
+
+.tabsVerticalLeft .contentTabsPanelCollection {
+  float: right;
+  width: 437px; }
+
+.tabsVerticalRight .contentTabsNav {
+  float: right;
+  border-left: 1px solid #cccccc; }
+
+.tabsVerticalRight .contentTabsNav li.active a:before {
+  top: 0;
+  left: -12px;
+  border-top: 21px solid transparent;
+  border-right: 12px solid #0099d8;
+  border-bottom: 21px solid transparent; }
+
+.tabsVerticalRight .contentTabsPanelCollection {
+  float: left;
+  width: 740px; }
+
+.tabsHorizontalTop .contentTabsNav ul {
+  border-bottom: 1px solid #cccccc;
+  margin-bottom: 20px !important;
+  text-align: center; }
+
+.tabsHorizontalTop .contentTabsNav li, .tabsHorizontalBottom .contentTabsNav li {
+  display: inline-block;
+  border-right: 1px solid #cccccc;
+  border-bottom: none; }
+
+.tabsHorizontalTop .contentTabsNav li:first-child, .tabsHorizontalBottom .contentTabsNav li:first-child {
+  border-left: 1px solid #cccccc; }
+
+.tabsHorizontalTop .contentTabsNav li.active a:after {
+  top: 38px;
+  left: 33%;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-top: 10px solid #0099d8; }
+
+.tabsHorizontalBottom .contentTabsNav {
+  position: relative;
+  top: 475px; }
+
+.tabsHorizontalBottom .contentTabsNav ul {
+  border-top: 1px solid #cccccc;
+  margin-top: 20px !important;
+  text-align: center; }
+
+.tabsHorizontalBottom .contentTabsNav li:first-child {
+  border-left: 1px solid #cccccc; }
+
+.tabsHorizontalBottom .contentTabsNav li.active a:before {
+  top: -10px;
+  left: 33%;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-bottom: 10px solid #0099d8; }
+
+.tabsHorizontalBottom .contentTabsPanelCollection {
+  margin-top: -60px;
+  margin-bottom: 60px; }
+
+.tabsNone .contentTabsNav {
+  display: none; }
+
+.pinPanelIntro .contentTabsPanel {
+  overflow-y: hidden;
+  overflow-x: hidden; }
+
+.pinPanelIntro .contentTabsPanelContent {
+  height: 330px;
+  padding: 0 10px;
+  overflow-y: scroll;
+  overflow-x: hidden; }
+
+.pinPanelIntro .contentTabsPanelIntro {
+  border-bottom: 1px solid #ac1e82;
+  background-color: #ececec;
+  height: 100px;
+  padding: 10px 15px;
+  margin: 0 0 15px;
+  overflow: hidden; }
+
+/* copy these along wih content tabs since they're used in the panel views */
+.mediaBlock, .mediaBlockContent {
+  overflow: hidden;
+  _overflow: visible;
+  zoom: 1; }
+
+.mediaBlock img {
+  float: left;
+  margin-right: 10px;
+  display: block; }
+
+.oneColList, .twoColGrid {
+  clear: both; }
+
+.oneColList > ul, .twoColGrid > ul {
+  clear: both;
+  margin: 0 !important;
+  padding: 0 !important;
+  list-style: none;
+  overflow: hidden; }
+
+.twoColGrid ul > li {
+  clear: left;
+  border-top: 1px solid #dddddd;
+  overflow: hidden; }
+
+.oneColList ul > li:first-child, .twoColGrid ul > li:first-child {
+  border: none;
+  margin-top: 0; }
+
+.twoColGrid .gridItem {
+  width: 46%;
+  float: left;
+  margin: 15px 10px; }
+
+.twoColGrid .gridItem:first-child {
+  border-right: 1px solid #dddddd;
+  padding-right: 10px; }
+
+.twoColGrid .gridItem p {
+  margin: 10px 0 0 !important;
+  line-height: 1.1 !important; }
+
+.twoColGrid .mediaBlockImage {
+  width: 80px;
+  height: 100px; }
+
+.oneColList {
+  margin: -10px 0 0; }
+
+.oneColList li {
+  border-top: 1px solid #dddddd;
+  margin: 15px 0 5px;
+  padding: 15px 0 0; }
+
+.oneColList h4 {
+  font-size: 16px;
+  margin: 0 0 5px !important; }
+
+.oneColList p {
+  margin: 0 0 5px !important; }
+
+.contentTabsCaption {
+  font-size: 20px;
+  margin: 0 0 5px !important; }
