--- a/sites/dev/ibmservicevirtmicrosite/embedded.jade
+++ b/sites/dev/ibmservicevirtmicrosite/embedded.jade
@@ -10,7 +10,9 @@ block content
               h1 Service Virtualization Performance Center
         #micrositeContent
           #micrositeContentColumnFull
-            //- introduction stuff here
+            .introText
+              h3 Accelerated testing. Quality results.
+              p Service virtualization helps to address all these issues and more. Create understandable, virtualized services, applications or entire systems without relying on teams of developers for coding. No need to wait until all the components are available and deployed to begin end to end testing. Balance quality and speed delivering high quality applications to take advantage of marketplace opportunities while decreasing risk and lowering your cost of quality.
             include featuredVideo
           #micrositeContentColumnLeft
             .contentTabsCaption Discover how service virtualization can accelerae software delivery cross these platforms
