--- a/sites/dev/_boilerplate/css/style.css
+++ b/sites/dev/_boilerplate/css/style.css
@@ -134,11 +134,11 @@ audio, canvas, video { display: inline-block; *display: inline; *zoom: 1; }
 .alignRight { float: right; }
 
 /* for embedded microsites */
-#micrositeAdvertisement { height: 20px; margin: 15px 0 0 0; position: relative; text-align: center; width: 980px; }
-#micrositeAdvertisement h3 { color: #999; font-size: 10px; font-weight: normal; margin: 0; padding: 5px 0 0; }
-#micrositeClose { float: right; position: absolute; right: 0; top: 0; }
-#micrositeClose a { background: url(../images/micrositeCloseButton.png) no-repeat 0 0; display: block; height: 20px; width: 75px; white-space: nowrap; overflow: hidden; text-indent: 100%; }
-
+#micrositeAdvertisement { height: 25px; background-color: #999; color: #fff; margin: 15px 0 0 0; overflow: hidden; }
+#micrositeAdvertisement h3 { line-height: 25px; padding: 0 10px; font-size: 12px; float: left; }
+#micrositeClose { float: right; border-left: 1px solid #b1b1b1; }
+#micrositeClose a { font-weight: bold; background: url(../images/iconMicrositeClose.png) 7px 6px no-repeat; line-height: 25px; padding: 0 10px 0 20px; display: block; font-size: 12px; color: #fff; }
+#micrositeClose a:hover { text-decoration: none; }
 
 
 
