--- a/sites/dev/hpci2/css/style.css
+++ b/sites/dev/hpci2/css/style.css
@@ -393,7 +393,7 @@ a.activeThumbnail { border: 5px solid #007dba !important; }
 .oneColList p { margin: 0 0 5px !important; }
 .contentTabsCaption { font-size: 26px; margin: 0 0 5px !important; }
 
-/* end New Tab Module 03-26-13  */
+.contentTabsAssetTopic { font-weight: bold; font-size: 14px; display: block; margin: 0 0 5px; }
 
 
 /*
@@ -402,4 +402,3 @@ a.activeThumbnail { border: 5px solid #007dba !important; }
 .micrositeFeaturedTabCloud > a { background: url(../images/tab_cloudOff.png) no-repeat; }
 .micrositeFeaturedTabCloud > a.current { background: url(../images/tab_cloudOn.png) no-repeat; bottom: -1px; }
  */
-
