updating error handling

--- a/lib/templates/newSiteEmail/html.ejs
+++ b/lib/templates/newSiteEmail/html.ejs
@@ -3,21 +3,40 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=790">
-  <title>Email Subject</title>
-  <meta name="robots" content="noindex,nofollow"></meta>
-  <meta property="og:title" content="New Site / Blog Launch"></meta>
+  <title>Release notes for <%= site %></title>
 </head>
-<body>
 
-  <div class="wrapper">
+<body leftmargin="0" marginwidth="0" topmargin="0" marginheight="0" offset="0">
+<center>
 
-    <h1>Hi there {{= site }} {{= msg }}</h1>
+  <table border="0" cellpadding="0" cellspacing="0" height="100%" width="100%" id="backgroundTable">
+  <tr>
+  <td align="center" valign="top" style="padding-top:20px;">
 
-    <pre>
-      {{= files }}
-    </pre>
+    <table border="0" cellpadding="0" cellspacing="0" width="600" id="templateContainer">
+    <tr>
+    <td align="center" valign="top">
 
-  </div>
+      <table border="0" cellpadding="20" cellspacing="0" width="100%">
+      <tr>
+      <td valign="top" class="bodyContent">
 
+        <div>
+        <h4 class="h4"><%= fullname %> created a new site called <%= site %></h4>
+        </div>
+
+      </td>
+      </tr>
+      </table>
+
+    </td>
+    </tr>
+    </table>
+
+  </td>
+  </tr>
+  </table>
+
+</center>
 </body>
 </html>
