Changes as of 4-14-13 5:38pm

--- a/sites/dev/ibmservicevirtmicrosite/embedded.jade
+++ b/sites/dev/ibmservicevirtmicrosite/embedded.jade
@@ -11,11 +11,12 @@ block content
         #micrositeContent
           #micrositeContentColumnFull
             .introText
+              img(src="images/business-woman.png")
               h3 Accelerated testing. Quality results.
-              p Service virtualization helps to address all these issues and more. Create understandable, virtualized services, applications or entire systems without relying on teams of developers for coding. No need to wait until all the components are available and deployed to begin end to end testing. Balance quality and speed delivering high quality applications to take advantage of marketplace opportunities while decreasing risk and lowering your cost of quality.
+              p Service virtualization helps to address all these issues and more. Create understandable, virtualized services, applications or entire systems without relying on teams of developers for coding. No need to wait until all the components are available and deployed to beginzz end to end testing. Balance quality and speed delivering high quality applications to take advantage of marketplace opportunities while decreasing risk and lowering your cost of quality.
             include featuredVideo
           #micrositeContentColumnLeft
-            .contentTabsCaption Discover how service virtualization can accelerae software delivery cross these platforms
+            .contentTabsCaption Discover how service virtualization can accelerate<br />software delivery across these platforms
             include contentTabs
           #micrositeContentColumnRight
-            p service virtualization resources here
+            h3 Service Virtualization Resources
