--- a/sites/dev/ibmservicevirtmicrosite/css/style.css
+++ b/sites/dev/ibmservicevirtmicrosite/css/style.css
@@ -84,16 +84,18 @@ audio, canvas, video { display: inline-block; *display: inline; *zoom: 1; }
 #byline .author { float: left; font-weight: bold; padding: 7px 0 0; }
 
 /* layout selectors */
-#micrositeContainer { margin: 0; }
+#micrositeContainer {background:#fff url(../images/contentBkgImage.png) no-repeat 2px 0; border-left: 1px solid #b1b1b1;border-right: 1px solid #b1b1b1; margin: 0; }
 #micrositeContainerInner { margin: 0; }
-#micrositeContainerCompress { margin: 0 auto; width: 980px; }
-#micrositeContent { font-size: 80%; overflow: hidden; margin: 0 20px 25px; }
-#micrositeContentColumnFull { background:url(../images/business-woman.png) no-repeat 700px 0; margin: 0 0 25px; }
-#micrositeContentColumnFull .introText {padding:15px 0 0;width: 620px}
+#micrositeContainerCompress { margin: 0 auto; width: 978px; }
+#micrositeContent {font-size: 80%; overflow: hidden; margin: 0 20px 25px; }
+#micrositeContentColumnFull {margin: 0 0 18px; }
+#micrositeContentColumnFull .introText {padding:15px 0 0;}
+#micrositeContentColumnFull .introText img{float: right; height: 158px; margin:-15px 0 0;width: 322px;}
 #micrositeContentColumnFull .introText h3{margin:0 0 .5em;}
-#micrositeContentColumnFull .introText p{font-size: 14px; line-height: 1.5}
+#micrositeContentColumnFull .introText p{font-size: 14px; line-height: 1.5; width: 620px;}
 #micrositeContentColumnLeft { float: left; width: 620px; }
 #micrositeContentColumnRight { float: right; width: 300px; }
+#micrositeContentColumnRight h3{color:#ac1f82;font-family: 'LubalinGraph', Arial, sans-serif; font-size: 20px;line-height:1.3;margin: 0 0 10px !important;}
 .micrositeContentColumnSpan { clear: both; }
 .micrositeModuleContainer { margin: 0; }
 .micrositeModuleHeader { margin: 0; }
@@ -105,7 +107,7 @@ audio, canvas, video { display: inline-block; *display: inline; *zoom: 1; }
 .mediaBlock img { float: left; margin-right: 10px; display: block; }
 
 /* header */
-#micrositeHeader { clear:both; position: relative; margin: 0; background: #ac1e82 url(../images/ibm-logo.png) no-repeat 870px 10px; }
+#micrositeHeader { clear:both; position: relative; margin: 0; background: #ac1f82 url(../images/ibm-logo.png) no-repeat 870px 10px; }
 #micrositeHeaderBanner p { margin: 0 !important; }
 #micrositeHeaderBanner h1 { margin: 0 0 0 22px; color: #fff; font-size: 24px !important; font-weight: 400; line-height: 62px;  -webkit-margin-before: 0 !important; -webkit-margin-after: 0 !important; 	}
 
@@ -159,7 +161,7 @@ audio, canvas, video { display: inline-block; *display: inline; *zoom: 1; }
 .socialShare-inner { margin: 0 auto; position: relative; }
 .addThisVertical {
   position: absolute;
-  top: -55px;
+  top: 0;
   background: rgb(255,255,255); /* Old browsers */
   background: -moz-linear-gradient(left,  rgba(255,255,255,1) 85%, rgba(221,221,221,1) 100%); /* FF3.6+ */
   background: -webkit-gradient(linear, left top, right top, color-stop(85%,rgba(255,255,255,1)), color-stop(100%,rgba(221,221,221,1))); /* Chrome,Safari4+ */
@@ -173,7 +175,7 @@ audio, canvas, video { display: inline-block; *display: inline; *zoom: 1; }
 .addThisVertical.addthis_default_style { width: 36px; left: -23px; background: none; }
 .addThisVertical.addthis_20x20_style { width: 40px; left: -61px; }
 .addThisVertical.addthis_20x20_style a { margin: 10px; }
-.addThisVertical.addthis_32x32_style { width: 52px; margin: 10px; left: -82px; }
+.addThisVertical.addthis_32x32_style { width: 52px; margin:0 10px;left: -83px; }
 .addThisVertical.addthis_32x32_style a { margin: 12px; }
 
 
@@ -184,7 +186,7 @@ audio, canvas, video { display: inline-block; *display: inline; *zoom: 1; }
 
 .featuredVideo {
   border: 1px solid #ab1f80;
-  margin: 0 0 25px;
+  margin: 0 0 18px;
   padding: 10px 0 10px 10px;
   position: relative;
   overflow: hidden;
@@ -213,10 +215,11 @@ audio, canvas, video { display: inline-block; *display: inline; *zoom: 1; }
 }
 .featuredVideo .featuredVideoPlaylist .featuredVideoPlaylistHeader {
   color: white;
-  background-color: #444444;
-  font-size: 16px;
+  background-color: #666666;
+  font-family: 'helvetica neue', arial, sans-serif;
+  font-size: 12px;
   font-weight: normal;
-  padding: 3px 8px !important;
+  padding: 6px 8px !important;
   margin: 0 !important;
 }
 .featuredVideo .featuredVideoPlaylist ul {
@@ -330,6 +333,7 @@ audio, canvas, video { display: inline-block; *display: inline; *zoom: 1; }
 .contentTabsNav li a {
   color: black !important;
   display: block;
+  font-size: 11px;
   text-transform: uppercase;
   padding: 10px;
   max-height: 38px; }
@@ -339,14 +343,14 @@ audio, canvas, video { display: inline-block; *display: inline; *zoom: 1; }
 
 .contentTabsNav li.active a {
   color: white !important;
-  background-color: #0099d8 !important;
+  background-color: #00679c !important;
   border-bottom: none;
+  font-size: 11px;
   position: relative; }
 
 .contentTabsPanel {
   display: none;
   color: #4c4d4f;
-  height: 450px;
   overflow-y: scroll;
   overflow-x: hidden; }
 
@@ -367,7 +371,7 @@ audio, canvas, video { display: inline-block; *display: inline; *zoom: 1; }
 
 .tabsVerticalLeft .contentTabsNav, .tabsVerticalRight .contentTabsNav {
   width: 180px;
-  height: 470px; }
+  height: 402px; }
 
 .tabsVerticalLeft .contentTabsNav li.active a:after,
 .tabsVerticalRight .contentTabsNav li.active a:before,
@@ -387,8 +391,8 @@ audio, canvas, video { display: inline-block; *display: inline; *zoom: 1; }
   top: 0;
   right: -12px;
   border-top: 21px solid transparent;
-  border-left: 12px solid #0099d8;
-  border-bottom: 21px solid transparent; }
+  border-left: 12px solid #00679c;
+  border-bottom: 20px solid transparent; }
 
 .tabsVerticalLeft .contentTabsPanelCollection {
   float: right;
@@ -468,7 +472,6 @@ audio, canvas, video { display: inline-block; *display: inline; *zoom: 1; }
 .pinPanelIntro .contentTabsPanelIntro {
   border-bottom: 1px solid #ac1e82;
   background-color: #ececec;
-  height: 100px;
   padding: 10px 15px;
   margin: 0 0 15px;
   overflow: hidden; }
@@ -536,5 +539,7 @@ audio, canvas, video { display: inline-block; *display: inline; *zoom: 1; }
   margin: 0 0 5px !important; }
 
 .contentTabsCaption {
+  color: #ac1f82;
+  font-family: 'LubalinGraph', Arial, sans-serif;
   font-size: 20px;
-  margin: 0 0 5px !important; }
+  margin: 0 0 10px !important; }
