Changes as of 04-15-13 4:52pm

--- a/sites/dev/ibmservicevirtmicrosite/contentTabs.jade
+++ b/sites/dev/ibmservicevirtmicrosite/contentTabs.jade
@@ -1,4 +1,4 @@
-- var tabs = ['Powerful Integration', 'Tab 2', 'Tab 3', 'Tab 4', 'Tab 5'], graphicSize = '80x100', intoGraphicSize = '120x120';
+- var tabs = ['Powerful Integration', 'Testing & QA', 'Virtualize Service Apps', 'Operational Efficiency', 'Multi-Platform Agility', 'Upcoming Events'], graphicSize = '80x100', intoGraphicSize = '120x120';
 
 .contentTabs
   .contentTabsNav
@@ -18,6 +18,6 @@
             - for (var i = 0; i < 10; ++i) {
               li
                 h4: a(href='replaceMe') @Html.Ipsum.h4(5)
-                @Html.Ipsum.p(1, 8)
+                p @Html.Ipsum.p(1, 8)
                 p: a.viewNow(href='replaceMe') View Now
             - }
