--- a/sites/dev/ibmservicevirtmicrosite/css/style.css
+++ b/sites/dev/ibmservicevirtmicrosite/css/style.css
@@ -84,10 +84,12 @@ audio, canvas, video { display: inline-block; *display: inline; *zoom: 1; }
 #byline .author { float: left; font-weight: bold; padding: 7px 0 0; }
 
 /* layout selectors */
-#micrositeContainer {background:#fff url(../images/contentBkgImage.png) no-repeat 2px 0; border-left: 1px solid #b1b1b1;border-right: 1px solid #b1b1b1; margin: 0; }
+#micrositeContainer {background:#fff url(../images/contentBkgImage.png) no-repeat 2px 0; border: 1px solid #b1b1b1;border-bottom:none; margin: 0; }
 #micrositeContainerInner { margin: 0; }
 #micrositeContainerCompress { margin: 0 auto; width: 978px; }
 #micrositeContent {font-size: 80%; overflow: hidden; margin: 0 20px 25px; }
+#micrositeContent h4, #micrositeContent h4 a{color:#00679c;font-size: 13px;line-height: 1.3; text-decoration: none;}
+#micrositeContent h4 a:hover{color:#00679c;font-size: 13px;line-height: 1.3; text-decoration: underline;}
 #micrositeContentColumnFull {margin: 0 0 18px; }
 #micrositeContentColumnFull .introText {padding:15px 0 0;}
 #micrositeContentColumnFull .introText img{float: right; height: 158px; margin:-15px 0 0;width: 322px;}
@@ -95,7 +97,8 @@ audio, canvas, video { display: inline-block; *display: inline; *zoom: 1; }
 #micrositeContentColumnFull .introText p{font-size: 14px; line-height: 1.5; width: 620px;}
 #micrositeContentColumnLeft { float: left; width: 620px; }
 #micrositeContentColumnRight { float: right; width: 300px; }
-#micrositeContentColumnRight h3{color:#ac1f82;font-family: 'LubalinGraph', Arial, sans-serif; font-size: 20px;line-height:1.3;margin: 0 0 10px !important;}
+#micrositeContentColumnRight .resources h3{color:#ac1f82;font-family: 'LubalinGraph', Arial, sans-serif; font-size: 20px;font-weight:400;line-height:1.3;margin: 0 0 10px !important;}
+#micrositeContentColumnRight .resources img{float: left; margin:3px 10px 0 0;}
 .micrositeContentColumnSpan { clear: both; }
 .micrositeModuleContainer { margin: 0; }
 .micrositeModuleHeader { margin: 0; }
@@ -107,7 +110,7 @@ audio, canvas, video { display: inline-block; *display: inline; *zoom: 1; }
 .mediaBlock img { float: left; margin-right: 10px; display: block; }
 
 /* header */
-#micrositeHeader { clear:both; position: relative; margin: 0; background: #ac1f82 url(../images/ibm-logo.png) no-repeat 870px 10px; }
+#micrositeHeader { clear:both; position: relative; margin: 0; background: #ac1f82 url(../images/ibm-logo.png) no-repeat 870px 14px; }
 #micrositeHeaderBanner p { margin: 0 !important; }
 #micrositeHeaderBanner h1 { margin: 0 0 0 22px; color: #fff; font-size: 24px !important; font-weight: 400; line-height: 62px;  -webkit-margin-before: 0 !important; -webkit-margin-after: 0 !important; 	}
 
@@ -145,7 +148,7 @@ audio, canvas, video { display: inline-block; *display: inline; *zoom: 1; }
 .alignRight { float: right; }
 
 /* for embedded microsites */
-#micrositeAdvertisement { height: 25px; background-color: #999; color: #fff; margin: 15px 0 0 0;  overflow: hidden;}
+#micrositeAdvertisement { border:1px solid #b1b1b1; border-bottom:none;height: 25px; background-color: #999; color: #fff; margin: 15px 0 0 0;  overflow: hidden;}
 #micrositeAdvertisement h3 { line-height: 25px; padding: 0 10px; font-size: 12px; float: left; }
 #micrositeClose { float: right; border-left: 1px solid #b1b1b1; }
 #micrositeClose a { font-weight: bold; background: url(../images/iconMicrositeClose.png) 7px 6px no-repeat; line-height: 25px; padding: 0 10px 0 20px; display: block; font-size: 12px; color: #fff; }
@@ -155,7 +158,7 @@ audio, canvas, video { display: inline-block; *display: inline; *zoom: 1; }
 
 
 /* AddThis social sharing component  */
-.socialShare-addThis { display: none; position: absolute; z-index: 1; line-height: 0; }
+.socialShare-addThis { display: none; position: absolute; z-index: 1; line-height: 0;}
 .socialShare-addThis a { display: inline-block; margin: 0 0 0 8px; padding: 0 !important; }
 .socialShare-outer { position: absolute; width: 100%; z-index: 1; }
 .socialShare-inner { margin: 0 auto; position: relative; }
@@ -175,7 +178,7 @@ audio, canvas, video { display: inline-block; *display: inline; *zoom: 1; }
 .addThisVertical.addthis_default_style { width: 36px; left: -23px; background: none; }
 .addThisVertical.addthis_20x20_style { width: 40px; left: -61px; }
 .addThisVertical.addthis_20x20_style a { margin: 10px; }
-.addThisVertical.addthis_32x32_style { width: 52px; margin:0 10px;left: -83px; }
+.addThisVertical.addthis_32x32_style { width: 52px; margin:0 10px;left: -63px; }
 .addThisVertical.addthis_32x32_style a { margin: 12px; }
 
 
@@ -363,10 +366,14 @@ audio, canvas, video { display: inline-block; *display: inline; *zoom: 1; }
   margin: 0 0 10px 10px; }
 
 .contentTabsPanel p {
+  line-height: 1.4 !important;
   margin: 0 0 10px !important; }
 
+.contentTabsPanel p a{color: #00679c !important;}
+
 .contentTabsPanel h3 {
-  font-size: 16px !important;
+  color: #ac1f82 !important;
+  font-size: 14px !important;
   margin: 0 0 5px !important; }
 
 .tabsVerticalLeft .contentTabsNav, .tabsVerticalRight .contentTabsNav {
@@ -465,7 +472,7 @@ audio, canvas, video { display: inline-block; *display: inline; *zoom: 1; }
 
 .pinPanelIntro .contentTabsPanelContent {
   height: 330px;
-  padding: 0 10px;
+  padding: 0 15px;
   overflow-y: scroll;
   overflow-x: hidden; }
 
