final updates to ibmsv

--- a/sites/dev/ibmservicevirtmicrosite/embedded.jade
+++ b/sites/dev/ibmservicevirtmicrosite/embedded.jade
@@ -24,3 +24,5 @@ block content
               img(src="images/virtualizationForDummies.jpg", title="Virtualization For Dummies")
               h4 Learn the Basics of Service Virtualizaton
               p As our need to deliver software faster and meet market demands has increased, something usually has to be cut.
+            .blog
+              h3 The Rational Tester Blog
