--- a/sites/dev/ibmservicevirtmicrosite/css/style.css
+++ b/sites/dev/ibmservicevirtmicrosite/css/style.css
@@ -98,7 +98,9 @@ audio, canvas, video { display: inline-block; *display: inline; *zoom: 1; }
 #micrositeContentColumnLeft { float: left; width: 620px; }
 #micrositeContentColumnRight { float: right; width: 300px; }
 #micrositeContentColumnRight .resources h3{color:#ac1f82;font-family: 'LubalinGraph', Arial, sans-serif; font-size: 20px;font-weight:400;line-height:1.3;margin: 0 0 10px !important;}
-#micrositeContentColumnRight .resources img{float: left; margin:3px 10px 0 0;}
+#micrositeContentColumnRight .resources img{float: left; margin:3px 10px 0 5px;}
+#micrositeContentColumnRight .blog{margin: 30px 0 0;}
+#micrositeContentColumnRight .blog h3{color:#ac1f82;font-family: 'LubalinGraph', Arial, sans-serif; font-size: 20px;font-weight:400;line-height:1.3;margin: 0 0 10px !important;}
 .micrositeContentColumnSpan { clear: both; }
 .micrositeModuleContainer { margin: 0; }
 .micrositeModuleHeader { margin: 0; }
@@ -378,7 +380,7 @@ audio, canvas, video { display: inline-block; *display: inline; *zoom: 1; }
 
 .tabsVerticalLeft .contentTabsNav, .tabsVerticalRight .contentTabsNav {
   width: 180px;
-  height: 402px; }
+  height: 428px; }
 
 .tabsVerticalLeft .contentTabsNav li.active a:after,
 .tabsVerticalRight .contentTabsNav li.active a:before,
@@ -477,8 +479,9 @@ audio, canvas, video { display: inline-block; *display: inline; *zoom: 1; }
   overflow-x: hidden; }
 
 .pinPanelIntro .contentTabsPanelIntro {
-  border-bottom: 1px solid #ac1e82;
+  border-bottom: 1px solid #ac1f82;
   background-color: #ececec;
+  height: 72px;
   padding: 10px 15px;
   margin: 0 0 15px;
   overflow: hidden; }
